<resources>
    <string name="app_name">Poverty</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    //JuNe
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="Title">Title : </string>
    <string name="date">Posted On : </string>
    <string name="Description">Description : </string>
    <string name="view">view</string>
    <string name="likes">likes</string>
    <string name="AboutUsTitle" >"Together We Make the Poor Healthy"</string>
    <string name="AboutUsDes">
        In the United States, in 2007, the Bureau of Labor Statistics found that American households in the lowest fifth in terms of wealth, gave on average a higher percentage of their incomes to charitable organizations than those households in the highest fifth.[1] Charity Navigator writes that, according to Giving USA, Americans gave $298 billion in 2011 (about 2% of GDP).[2] The majority of donations were from individuals (73%), then from bequests (about 12%), foundations (2%) and less than 1% from corporations. The largest sector to receive donations was religious organizations (32%), then education (13%)
    </string>
    <string name="AboutUsDes2">Poverty is a state or condition in which a person or community lacks the financial resources and essentials for a minimum standard of living.</string>
    >

    //CS
    <string name="action_settings">Settings</string>
    <string name="save">Save</string>
    <string name="contact">Contact</string>
    <string name="name">Name</string>
    <string name="add">Add</string>
    <string name="error_value_required">Value is required</string>
    <string name="error_record_not_saved">Record not saved</string>
    <string name="record_saved">Record saved</string>
    <string name="sync">Sync</string>
    <string name="url_server">https://povertywebdb.000webhostapp.com/api/</string>
    <string name="url_user_read">user/read.php</string>
    <string name="url_user_read_one">user/read_one.php</string>
    <string name="url_user_create">user/create.php</string>


    <string name="pay">pay</string>

    <string name="Five">5.00</string>

    <string name="ten">10.00</string>

    <string name="fifty">50.00</string>

    <string name="otherten">10.00...</string>

    <string name="online">Paypal</string>

    <string name="credit">Credit and Debit</string>

    <string name="otheramount">Other amount</string>

    <string name="payment">Payment</string>

    <string name="amount">Amount</string>

    <string name="amountpay">Amount Pay (RM)</string>

    <string name="totalamount">Amount Donate (RM)</string>

    <string name="Cardno">Card Number</string>

    <string name="cardno">1111 1111 1111 1111</string>

    <string name="CVV">CVV</string>

    <string name="cvv">123</string>

    <string name="postal">Postal Code</string>

    <string name="postalcode">52000</string>

    <string name="phone">Contact Number</string>



    <string name="donate">Donate</string>

    <string name="back">Back</string>

    <string name="errorcard">please enter card number</string>

    <string name="errorcvv">please enter CVV number</string>

    <string name="errorpostal">please enter postal code</string>

    <string name="errorcontact">please enter contact number</string>

    <string name="erroremail">please enter email adress</string>

    <string name="errorpassword">please enter password</string>

    <string name="email">Email:</string>

    <string name="emailaddress">shusnshusn@hotmail.com</string>

    <string name="password">Password</string>

    <string name="ok">OK</string>

    <string name="cancel">Cancel</string>
    <string name="ProfileName">Name:</string>
    <string name="totalamount1">Total Amount</string>
    <string name="drawerName">Name</string>
    <string name="DrawerEmail" >Email</string>
    <string name="ButtonDonate">Donate</string>
    <string name="ButtonDetails">Details</string>
    <string name="ButtonShares">Share</string>
    <string name="PostTitle">The Title of a Blog</string>
    <string name="postdesc">subtitle</string>
    <string name="Number">0</string>
    <string name="postDetailsDesc">desc</string>
    <string name="PostDetailsImage">DetailImage</string>
    <string name="PostImage" >Post Image</string>


</resources>
